<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mask</string>
    <string name="topic">话题</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_user_icon1">相册选取</string>
    <string name="activity_user_icon2">相机拍照</string>
    <string name="lognding">正在加载中</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="clissify_activity">主分类</string>
    <string name="personal_data">个人信息</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_message">消息通知</string>
    <string name="file_upload">上传文件</string>
    <string name="my_upload">我的上传</string>
    <string name="recomment">推荐</string>
    <string name="_">详细分类</string>
    <string name="search">搜索</string>
    <string name="a_course_publish">课程高级回复</string>
    <string name="about_us">关于我们</string>
    <string name="include_main_bottom_tool1">主页</string>
    <string name="include_main_bottom_tool2">分类</string>
    <string name="include_main_bottom_tool3">推荐</string>
    <string name="include_main_bottom_tool4">话题</string>
</resources>
