<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        style="@style/TextH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_content"
        style="@style/TextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="#00FFFFFF"
        android:text="@string/app_name" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/selecter_dialog_button_left"
            android:text="@string/cancle"
            android:textColor="@color/main_title_bg" />

        <Button
            android:id="@+id/dialog_button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/selecter_dialog_button_right"
            android:text="@string/confirm"
            android:textColor="@color/main_title_bg" />
    </LinearLayout>

</LinearLayout>